@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,8 +26,8 @@
  * @test
  * @summary Test JVMTI Monitor functions for virtual threads
  * @requires vm.continuations
- * @compile --enable-preview -source ${jdk.version} VThreadMonitorTest.java
- * @run main/othervm/native --enable-preview -agentlib:VThreadMonitorTest VThreadMonitorTest
+ * @compile VThreadMonitorTest.java
+ * @run main/othervm/native -agentlib:VThreadMonitorTest VThreadMonitorTest
  */
 
 import java.io.PrintStream;
